--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -5,17 +5,17 @@ error.status=Status:
 error.message=Message:
 
 # Activation email
-email.activation.title=assistant-manager account activation
+email.activation.title=planty-assistant-manager account activation
 email.activation.greeting=Dear {0}
-email.activation.text1=Your assistant-manager account has been created, please click on the URL below to activate it:
+email.activation.text1=Your planty-assistant-manager account has been created, please click on the URL below to activate it:
 email.activation.text2=Regards,
-email.signature=assistant-manager Team.
+email.signature=planty-assistant-manager Team.
 
 # Creation email
-email.creation.text1=Your assistant-manager account has been created, please click on the URL below to access it:
+email.creation.text1=Your planty-assistant-manager account has been created, please click on the URL below to access it:
 
 # Reset email
-email.reset.title=assistant-manager password reset
+email.reset.title=planty-assistant-manager password reset
 email.reset.greeting=Dear {0}
-email.reset.text1=For your assistant-manager account a password reset was requested, please click on the URL below to reset it:
+email.reset.text1=For your planty-assistant-manager account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
