More re-arrangement to match jhipster generated code

--- a/src/main/webapp/i18n/en/agent.json
+++ b/src/main/webapp/i18n/en/agent.json
@@ -1,6 +1,6 @@
 
 {
-    "assistantManagerApp": {
+    "plantyAssistantManagerApp": {
         "agent" : {
             "home": {
                 "title": "Agents",
@@ -17,7 +17,8 @@
                 "title": "Agent"
             },
             "name": "Name",
-            "publicKey": "Public Key"
+            "publicKey": "Public Key",
+            "sessionId": "Session Id"
         }
     }
 }
