--- a/src/main/webapp/i18n/en/pairingRequest.json
+++ b/src/main/webapp/i18n/en/pairingRequest.json
@@ -1,6 +1,6 @@
 
 {
-    "assistantManagerApp": {
+    "plantyAssistantManagerApp": {
         "pairingRequest" : {
             "home": {
                 "title": "Pairing Requests",
