--- a/src/main/webapp/i18n/en/health.json
+++ b/src/main/webapp/i18n/en/health.json
@@ -11,10 +11,9 @@
             "error": "Error"
         },
         "indicator": {
-            "binders": "Message broker",
             "diskSpace": "Disk space",
             "mail": "Email",
-            "mongo": "MongoDB"
+            "db": "Database"
         },
         "table": {
             "service": "Service name",
