Implementing point-to-point messaging

--- a/src/main/webapp/i18n/en/agent.json
+++ b/src/main/webapp/i18n/en/agent.json
@@ -18,7 +18,8 @@
             },
             "name": "Name",
             "publicKey": "Public Key",
-            "sessionId": "Session Id"
+            "sessionId": "Session Id",
+            "user": "User"
         }
     }
 }
