--- a/src/main/webapp/i18n/en/pairingRequest.json
+++ b/src/main/webapp/i18n/en/pairingRequest.json
@@ -21,7 +21,8 @@
             "requestTime": "Request Time",
             "accepted": "Accepted",
             "sessionId": "Session Id",
-            "publicKey": "Public Key"
+            "publicKey": "Public Key",
+            "login": "Login"
         }
     }
 }
