Added agentSharing using yeoman

--- a/src/main/webapp/i18n/en/skill.json
+++ b/src/main/webapp/i18n/en/skill.json
@@ -17,6 +17,7 @@
                 "title": "Skill"
             },
             "name": "Name",
+            "agentSharing": "Agent Sharing",
             "users": "Users"
         }
     }
